--- a/miApp-2049276/src/app/lista-alumnos/lista-alumnos.component.html
+++ b/miApp-2049276/src/app/lista-alumnos/lista-alumnos.component.html
@@ -1,5 +1,21 @@
 <ion-list *ngFor="let alumno of alumnos">
-  <ion-item>
-    {{alumno}}
-  </ion-item>
+  <ion-list>
+    <ion-item-sliding>
+      <ion-item-options side="start">
+        <ion-item-option color="success" (click)="Agregar()">
+          <ion-icon name="heart" class="icono"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+
+      <ion-item>
+        <ion-label>{{alumno}}</ion-label>
+      </ion-item>
+
+      <ion-item-options side="end">
+        <ion-item-option color="danger" (click)="Delete()">
+          <ion-icon name="trash" class="icono"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
 </ion-list>
