--- a/miApp-2049276/src/app/productos/productos.component.html
+++ b/miApp-2049276/src/app/productos/productos.component.html
@@ -1,3 +1,6 @@
-<p>
-  productos works!
-</p>
+<ion-card *ngFor="let producto of productos" [routerLink]="['/producto', producto.id]">
+  <ion-card-title>{{producto.title}}</ion-card-title>
+  <ion-card-content>
+    <img width="250px" height="150px" src="{{producto.image}}" alt="">
+  </ion-card-content>
+</ion-card>
