--- a/miApp-2049276/src/app/app.component.html
+++ b/miApp-2049276/src/app/app.component.html
@@ -1,6 +1,8 @@
 <ion-app>
   <ion-router-outlet></ion-router-outlet>
   <ion-content>
-    <app-productos></app-productos>
+
   </ion-content>
 </ion-app>
+
+<app-lista-alumnos></app-lista-alumnos>
