--- a/miApp-2049276/src/app/lista-alumnos/lista-alumnos.component.html
+++ b/miApp-2049276/src/app/lista-alumnos/lista-alumnos.component.html
@@ -1,21 +1,58 @@
-<ion-list *ngFor="let alumno of alumnos">
-  <ion-list>
-    <ion-item-sliding>
-      <ion-item-options side="start">
-        <ion-item-option color="success" (click)="Agregar()">
-          <ion-icon name="heart" class="icono"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
+<form 
+  #alumnosForm="ngForm" 
+  (ngSubmit)="agregaAlumno()"> 
+  <ion-label>Nombre alumno:</ion-label>
+  <ion-input 
+    required="true" 
+    [(ngModel)]="alumno.nombre" 
+    placeholder="Nombre" 
+    name="nombre">
+  </ion-input>
+  <ion-label>
+    <br>
+    <ion-checkbox 
+      required="true" 
+      [(ngModel)]="alumno.presente" 
+      name="presente"> 
+      Presente</ion-checkbox>
+  </ion-label>
+  <div>
+    <br>
+    <ion-button 
+      shape="round" 
+      type="submit" 
+      fill="outline"
+      color="dark"
+      mode="ion-item-sliding"
+      [disabled]="alumnosForm.invalid">Agregar</ion-button>
+  </div>
+</form>
 
+<ion-card>
+  <ion-list *ngFor="let a of alumnos">
+    
       <ion-item>
-        <ion-label>{{alumno}}</ion-label>
+        <ion-label>{{a.nombre}}</ion-label>
       </ion-item>
 
+  </ion-list>
+</ion-card>
+
+<!--<ion-card >
+  <ion-list *ngFor="let a of alumnos">
+    <ion-item-sliding>
+      <ion-item>
+        <ion-label>{{a.nombre}}</ion-label>
+        <ion-avatar>
+          <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg">
+          <ion-label>{{a.nombre}}</ion-label>
+        </ion-avatar>
+      </ion-item>
       <ion-item-options side="end">
         <ion-item-option color="danger" (click)="Delete()">
           <ion-icon name="trash" class="icono"></ion-icon>
         </ion-item-option>
-      </ion-item-options>
+      </ion-item-options>      
     </ion-item-sliding>
   </ion-list>
-</ion-list>
+</ion-card>-->
