--- a/miApp-2049276/src/app/lista-alumnos/lista-alumnos.component.scss
+++ b/miApp-2049276/src/app/lista-alumnos/lista-alumnos.component.scss
@@ -1,5 +1,32 @@
-.icono{
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 30px;
-    padding: 10px;
+ion-checkbox {
+    --size: 17px;
+    --checkbox-background-checked: #c021a8;
+ }
+  
+ion-checkbox::part(container) {
+    border-radius: 6px;
+    border: 2px solid #c021a8;
+}
+
+ion-input .ng-dirty {
+    --highlight-color-valid: rgb(74, 218, 177);
+}
+
+ion-input .ng-pristine {
+    --highlight-color-valid: white;
+}
+
+ion-input .ng-invalid {
+    --highlight-color-valid: red;
+}
+
+form .ng-invalid {
+    background-color: beige;
+}
+
+form .ng-valid {
+    background-color:rgb(255, 255, 255);
+}
+form{
+    padding: 3rem;
 }
