--- a/miApp-2049276/src/app/app.component.html
+++ b/miApp-2049276/src/app/app.component.html
@@ -1,8 +1,6 @@
 <ion-app>
   <ion-router-outlet></ion-router-outlet>
   <ion-content>
-
+    <app-camara></app-camara>
   </ion-content>
 </ion-app>
-
-<app-lista-alumnos></app-lista-alumnos>
